set locale properties in tests so that they don't fail in systems with other languag configured

--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,9 @@ subprojects {
             }
         }
     }
+    test {
+        systemProperty 'user.language', 'en'
+    }
 }
 
 // Configure IDEA to use Git
