--- a/jpos/src/main/resources/org/jpos/q2/QFactory.properties
+++ b/jpos/src/main/resources/org/jpos/q2/QFactory.properties
@@ -13,4 +13,4 @@ channel-adaptor=org.jpos.q2.iso.ChannelAdaptor
 qexec=org.jpos.q2.qbean.QExec
 config=org.jpos.q2.qbean.QConfig
 xml-config=org.jpos.q2.qbean.QXmlConfig
-
+sshd=org.jpos.q2.ssh.SshService
