--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -4,7 +4,7 @@ ext {
         jdbm: 'jdbm:jdbm:1.0',
         sleepycat_je: 'com.sleepycat:je:6.4.25',
         commons_cli: 'commons-cli:commons-cli:1.3.1',
-        jline: 'jline:jline:1.0',
+        jline: 'org.jline:jline:3.0.0.M2',
         beanshell: 'org.beanshell:bsh:2.0b5',
         javatuples: 'org.javatuples:javatuples:1.2',
         jsonsimple: 'com.googlecode.json-simple:json-simple:1.1.1',
@@ -20,7 +20,10 @@ ext {
         hamcrest: [
             'org.hamcrest:hamcrest-core:1.3',
             'org.hamcrest:hamcrest-library:1.3'
-        ]
+        ],
+        sshd: 'org.apache.sshd:sshd-core:0.14.0',
+        slf4j_api: "org.slf4j:slf4j-api:1.7.21",
+        slf4j_nop: "org.slf4j:slf4j-nop:1.7.21"
     ]
 }
 
