--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install: true
 script:
 - sudo apt-get update && sudo apt-get install oracle-java8-installer
 - java -version
-- TERM=dumb ./gradlew assemble check --info
+- TERM=dumb ./gradlew assemble check
 after_success: .travis/update-gh-pages.sh
 after_failure: .travis/update-gh-pages.sh
 env:
