--- a/jpos/src/main/resources/org/jpos/q2/QFactory.properties
+++ b/jpos/src/main/resources/org/jpos/q2/QFactory.properties
@@ -14,3 +14,5 @@ qexec=org.jpos.q2.qbean.QExec
 config=org.jpos.q2.qbean.QConfig
 xml-config=org.jpos.q2.qbean.QXmlConfig
 sshd=org.jpos.q2.ssh.SshService
+ssm=org.jpos.q2.security.SMAdaptor
+ks=org.jpos.q2.security.KeyStoreAdaptor
