--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile libraries.slf4j_api
     compile libraries.javassist
     compile libraries.hdrhistogram
+    compile libraries.jersey_json
 
     testCompile libraries.hamcrest
     testCompile libraries.fest_assert
