--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -24,7 +24,8 @@ ext {
         sshd: 'org.apache.sshd:sshd-core:1.3.0',
         slf4j_api: "org.slf4j:slf4j-api:1.7.22",
         slf4j_nop: "org.slf4j:slf4j-nop:1.7.22",
-        hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.10'
+        hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.10',
+        jersey_json: 'org.glassfish.jersey.media:jersey-media-json-jackson:2.22.1'
     ]
 }
 
