--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ subprojects {
     apply plugin: 'maven'
     apply plugin: 'signing'
     apply plugin: 'pmd'
+    apply plugin: 'jacoco'
     apply plugin: 'project-report'
 
     group = 'org.jpos'
@@ -109,6 +110,9 @@ subprojects {
             events "passed", "skipped", "failed"
         }
         systemProperty 'user.language', 'en'
+    }
+    jacoco {
+        toolVersion = '0.8.4'
     }
 }
 
