set IDEA language level to 1.8
[ci skip]

--- a/build.gradle
+++ b/build.gradle
@@ -109,8 +109,17 @@ subprojects {
 }
 
 // Configure IDEA to use Git
-idea.project.ipr {
-   withXml { provider -> provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git' }
+idea {
+    project {
+        ipr {
+            withXml { 
+                provider -> provider.node.component.find { 
+                    it.@name == 'VcsDirectoryMappings' 
+                }.mapping.@vcs = 'Git' 
+            }
+        }
+        languageLevel = '1.8'
+    }
 }
 
 task aggregatedJavadoc (type: Javadoc, description: "Aggregated Javadocs") {
