--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -24,7 +24,10 @@ ext {
         sshd: 'org.apache.sshd:sshd-core:1.7.0',
         slf4j_api: "org.slf4j:slf4j-api:1.7.22",
         slf4j_nop: "org.slf4j:slf4j-nop:1.7.22",
-        hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.10'
+        hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.10',
+        kafka: 'org.apache.kafka:kafka-clients:1.1.0',
+        jacksonDatabind: 'com.fasterxml.jackson.core:jackson-databind:2.9.5',
+        jsonsimple: 'com.googlecode.json-simple:json-simple:1.1.1'
     ]
 }
 
