--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ subprojects {
     apply plugin: 'pmd'
 
     group = 'org.jpos'
-    version = '2.1.2-SNAPSHOT'
+    version = '2.1.2'
     [ compileJava, compileTestJava, javadoc ]*.options*.encoding = 'UTF-8'
     def isSnapshot = version.contains("SNAPSHOT")
     def mavenCentralRepo = isSnapshot ?
