--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ jdk:
 - oraclejdk8
 before_script:
 - echo $JAVA_OPTS
-- export JAVA_OPTS=-Xmx2G
+- export JAVA_OPTS=-Xmx4G
 install: true
 script:
 - sudo apt-get update && sudo apt-get install oracle-java8-installer
 - java -version
-- TERM=dumb ./gradlew assemble check --info
+- TERM=dumb ./gradlew jpos:assemble jpos:check --info
 after_success: .travis/update-gh-pages.sh
 after_failure: .travis/update-gh-pages.sh
 env:
