--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install: true
 script:
 - sudo apt-get update && sudo apt-get install oracle-java8-installer
 - java -version
+- ulimit -a
 - TERM=dumb ./gradlew jpos:assemble jpos:check --info
 after_success: .travis/update-gh-pages.sh
 after_failure: .travis/update-gh-pages.sh
