--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ subprojects {
     apply plugin: 'maven'
     apply plugin: 'signing'
     apply plugin: 'pmd'
+    apply plugin: 'project-report'
 
     group = 'org.jpos'
     version = '2.1.3-SNAPSHOT'
