--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -73,7 +73,7 @@ def jposCopySpec = copySpec {
         include 'cfg/authorized_keys'
         fileMode 0400
     }
-    from(file("${project.libsDirName}/${q2ArchiveJarName}"))
+    from(file("${project.buildDir}/${project.libsDirName}/${q2ArchiveJarName}"))
 
     into("lib") {
         from(configurations.runtime)
@@ -92,6 +92,10 @@ def bundleDocURL = 'http://jpos.org/doc/javadoc/index.html'
 task listJars {
     doLast {
         configurations.testCompile.each { File file -> println file.name }
+        println "    libsDir: ${project.libsDir}"
+        println "libsDirName: ${project.libsDirName}"
+        println "libsDirName: ${project.libsDirName}"
+        println "    project: ${project.buildDir}"
     }
 }
 
