--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -4,9 +4,12 @@ buildscript {
     }
     dependencies {
         classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:4.1.0'
+        classpath 'org.owasp:dependency-check-gradle:5.0.0-M2'
     }
 }
 apply plugin: 'biz.aQute.bnd.builder'
+apply plugin: 'org.owasp.dependencycheck'
+
 import aQute.bnd.gradle.Bundle
 
 dependencies {
