--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 - sudo apt-get update && sudo apt-get install oracle-java8-installer
 - java -version
 - ulimit -a
-- TERM=dumb ./gradlew jpos:assemble jpos:check --info --max-workers=1 --foreground
+- TERM=dumb ./gradlew jpos:assemble jpos:check --info
 after_success: .travis/update-gh-pages.sh
 after_failure: .travis/update-gh-pages.sh
 env:
