--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ subprojects {
     apply plugin: 'project-report'
 
     group = 'org.jpos'
-    version = '2.1.3'
+    version = '2.1.4-SNAPSHOT'
     [ compileJava, compileTestJava, javadoc ]*.options*.encoding = 'UTF-8'
     def isSnapshot = version.contains("SNAPSHOT")
     def mavenCentralRepo = isSnapshot ?
