--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -13,6 +13,7 @@ ext {
         fest_assert: 'org.easytesting:fest-assert:1.4',
         xmlunit: 'xmlunit:xmlunit:1.6',
         junit: 'junit:junit:4.12',
+        junit_vintage: 'org.junit.vintage:junit-vintage-engine:5.4.2',
         bouncycastle: [
             'org.bouncycastle:bcprov-jdk15on:1.61',
             'org.bouncycastle:bcpg-jdk15on:1.61'
