--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 sudo: required
-dist: trusty
+dist: xenial
 language: java
 jdk:
-- oraclejdk8
+  - openjdk8
+  - openjdk11
+  - openjdk12
 before_script:
-- echo $JAVA_OPTS
-- export JAVA_OPTS=-Xmx4G
+  - echo $JAVA_OPTS
+  - export JAVA_OPTS=-Xmx4G
 install: true
 script:
-- sudo apt-get update && sudo apt-get install oracle-java8-installer
-- java -version
-- ulimit -a
-- TERM=dumb ./gradlew jpos:assemble jpos:check --info
+  - java -version
+  - ulimit -a
+  - TERM=dumb ./gradlew jpos:assemble jpos:check --info
 after_success: .travis/update-gh-pages.sh
 after_failure: .travis/update-gh-pages.sh
 env:
