--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ dist: trusty
 language: java
 jdk:
 - oraclejdk8
-before_script:
-- echo $JAVA_OPTS
-- export JAVA_OPTS=-Xmx4G
 install: true
 script:
 - sudo apt-get update && sudo apt-get install oracle-java8-installer
@@ -16,7 +13,9 @@ after_success: .travis/update-gh-pages.sh
 after_failure: .travis/update-gh-pages.sh
 env:
   global:
-    secure: ZWDnTNCsRaxOV4hPiWslj1ieKwYjuxBA4COHFVApxr8TBcQEwhPAzo+b+WbDsi45rJkk/Ee9Du0+mbT//x3TTK78fePg6EDk0WBSmWRUFC3eITgTmUJe7Qh5VOUZOdz9vFaYH8080/CB4VyygJuSp2XLte+S/MVSoXVVABrNggU=
+    - JAVA_OPTS="-Xmx4G -XX:+UseCompressedOops"
+    - GRADLE_OPTS="-Xmx4G -XX:+UseCompressedOops"
+    - secure: ZWDnTNCsRaxOV4hPiWslj1ieKwYjuxBA4COHFVApxr8TBcQEwhPAzo+b+WbDsi45rJkk/Ee9Du0+mbT//x3TTK78fePg6EDk0WBSmWRUFC3eITgTmUJe7Qh5VOUZOdz9vFaYH8080/CB4VyygJuSp2XLte+S/MVSoXVVABrNggU=
 notifications:
   slack:
     secure: opKU+4jJWYuhq5STCVW2cvxEq/1/xY17xpxGKoJXWA+RbhPo+viT5uJLmb67HwdmvQNwUVAW6uOLO7SDOmpGh5oAwpI74DrA0y6uEzN6GgzutZDBY5oCMRYCGi/5xNOuzDdsryDtSJvXWLxyCysnTrAqqQ9XdOnRK/ZqSIeQg+s=
