Ensure tests using JESpace are run as separate processes.

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,19 @@ subprojects {
             events "passed", "skipped", "failed"
         }
         systemProperty 'user.language', 'en'
+        exclude '**/JESpaceTestCase.*'
+        exclude '**/TransactionManagerTestCase.*'
+        dependsOn "JESpaceTest"
+    }
+    task JESpaceTest(type: Test) {
+        useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
+        systemProperty 'user.language', 'en'
+        include '**/JESpaceTestCase.*'
+        include '**/TransactionManagerTestCase.*'
+        forkEvery = 1
     }
 }
 
