Run tests under jdk 13 and update dependencies.

--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     testCompile libraries.hamcrest
     testCompile libraries.fest_assert
     testCompile libraries.xmlunit
-    testImplementation libraries.junit_jupiter
+    testImplementation libraries.junit
     testCompile(libraries.mockito) {
         exclude(module: 'hamcrest-core')
     }
