--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -5,26 +5,26 @@ ext {
         sleepycat_je: 'com.sleepycat:je:18.3.12',
         commons_cli: 'commons-cli:commons-cli:1.4',
         commons_lang3: 'org.apache.commons:commons-lang3:3.9',
-        jline: 'org.jline:jline:3.9.0',
+        jline: 'org.jline:jline:3.12.1',
         beanshell: 'org.apache-extras.beanshell:bsh:2.0b6',
         javatuples: 'org.javatuples:javatuples:1.2',
-        javassist: 'org.javassist:javassist:3.23.1-GA',
+        javassist: 'org.javassist:javassist:3.25.0-GA',
         osgi_core: 'org.osgi:org.osgi.core:6.0.0',
         mockito: 'org.mockito:mockito-core:3.0.0',
         mockito_jupiter: 'org.mockito:mockito-junit-jupiter:3.0.0',
         fest_assert: 'org.easytesting:fest-assert:1.4',
         xmlunit: 'xmlunit:xmlunit:1.6',
-        junit_jupiter: 'org.junit.jupiter:junit-jupiter:5.5.0',
+        junit: 'org.junit.jupiter:junit-jupiter:5.5.2',
         bouncycastle: [
-            'org.bouncycastle:bcprov-jdk15on:1.61',
-            'org.bouncycastle:bcpg-jdk15on:1.61'
+            'org.bouncycastle:bcprov-jdk15on:1.63',
+            'org.bouncycastle:bcpg-jdk15on:1.63'
         ],
         hamcrest: 'org.hamcrest:hamcrest:2.1',
-        sshd: 'org.apache.sshd:sshd-core:1.7.0',
-        slf4j_api: "org.slf4j:slf4j-api:1.7.26",
-        slf4j_nop: "org.slf4j:slf4j-nop:1.7.26",
+        sshd: 'org.apache.sshd:sshd-core:2.3.0',
+        slf4j_api: "org.slf4j:slf4j-api:1.7.28",
+        slf4j_nop: "org.slf4j:slf4j-nop:1.7.28",
         hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.11',
-        yaml: "org.yaml:snakeyaml:1.24"
+        yaml: "org.yaml:snakeyaml:1.25"
     ]
 }
 
