Fix javadoc plugin
Change way of javadoc plugin configuraton. The earlier one seems
to have stopped working.

 * Set javadoc window title and pages header
 * Add linking to Java 8 SDK API
 * Register apiNote, implNote, implSpec tags to fix:
   "warning - @apiNote is an unknown tag."

--- a/build.gradle
+++ b/build.gradle
@@ -39,12 +39,6 @@ subprojects {
       } 
     }
 
-    if (JavaVersion.current().isJava8Compatible()) {
-        tasks.withType(Javadoc) {
-          options.addStringOption('Xdoclint:none', '-quiet')
-        }
-    }
-
     def pomConfig = {
         name 'jPOS Project'
         description """
@@ -104,6 +98,23 @@ subprojects {
             }
         }
     }
+
+    javadoc {
+        configure(options) {
+            windowTitle = "jPOS ${project.version}"
+            header = "<b>jPOS ${project.version}</b>"
+            linkSource = true
+            links(
+                'https://docs.oracle.com/javase/8/docs/api'
+            )
+            tags(
+                'apiNote:a:API Note:',
+                'implSpec:a:Implementation Requirements:',
+                'implNote:a:Implementation Note:'
+            )
+        }
+    }
+
     test {
         useJUnitPlatform()
         testLogging {
