Use api/implementation in dependencies
Also removed assorted Gradle 6 warnings.

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ allprojects {
 }
 
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
     apply plugin: 'pmd'
