--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -123,6 +123,10 @@ jar () {
     )
 }
 
+java {
+   withSourcesJar()
+}
+
 task q2jar (type: Bundle) {
     dependsOn jar
     archiveClassifier.set('q2')
