adding install gradle task as an easy alias for publishToMavenLocal

--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -213,6 +213,10 @@ task version (type: JavaExec, dependsOn: classes) {
     classpath sourceSets.main.runtimeClasspath
 }
 
+// just an alias to keep the old install task name
+task install(dependsOn: publishToMavenLocal) {}
+
+
 class GitRevisionTask extends DefaultTask
 {
     @InputFile @Optional
