--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -21,6 +21,7 @@ ext {
         ],
         hamcrest: 'org.hamcrest:hamcrest:2.2',
         sshd: 'org.apache.sshd:sshd-core:2.4.0',
+        eddsa: 'net.i2p.crypto:eddsa:0.3.0',
         slf4j_api: "org.slf4j:slf4j-api:1.7.30",
         slf4j_nop: "org.slf4j:slf4j-nop:1.7.30",
         hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.12',
