Thank you Arturo for your contribution
[ci skip]

--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -25,7 +25,8 @@ ext {
         slf4j_api: "org.slf4j:slf4j-api:1.7.30",
         slf4j_nop: "org.slf4j:slf4j-nop:1.7.30",
         hdrhistogram: 'org.hdrhistogram:HdrHistogram:2.1.12',
-        yaml: "org.yaml:snakeyaml:1.26"
+        yaml: "org.yaml:snakeyaml:1.26",
+        vfs2: 'org.apache.commons:commons-vfs2:2.6.0'
     ]
 }
 
