--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -25,8 +25,10 @@ dependencies {
 
     implementation libraries.osgi_core
     implementation libraries.javassist
+    implementation libraries.jolokia_jmx
     implementation libraries.yaml;
     implementation libraries.jdbm
+    implementation libraries.json
     implementation libraries.sleepycat_je
     implementation libraries.sshd
     implementation libraries.eddsa
