Refactor to use System.nanoTime() based clock/timeouts.

--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -31,5 +31,6 @@ jobs:
         TERM: dumb
     - name: Dependency Check Analyze
       run: ./gradlew jpos:dependencyCheckAnalyze --info
+      if: runner.os != 'macOS'
       env:
         TERM: dumb
