Desktop.browse is now .Desktop.desktop.browse
java.awt.Desktop.browse is now java.awt.Desktop.desktop.browse

--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -295,8 +295,9 @@ task installApp(type: Sync) {
 
 task viewTests (description: 'Open Test Reports') {
     doLast {
-        Class.forName("java.awt.Desktop").newInstance().browse(
-            new File("${buildDir}/reports/tests/test", 'index.html').toURI())
+        java.awt.Desktop.desktop.browse (
+            new File("${buildDir}/reports/tests/test", 'index.html').toURI()
+        )
     }
 }
 
