--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -8,7 +8,6 @@ ext {
         jline: 'org.jline:jline:3.20.0',
         beanshell: 'org.apache-extras.beanshell:bsh:2.0b6',
         javatuples: 'org.javatuples:javatuples:1.2',
-        javassist: 'org.javassist:javassist:3.27.0-GA',
         osgi_core: 'org.osgi:org.osgi.core:6.0.0',
         mockito: 'org.mockito:mockito-core:3.8.0',
         mockito_jupiter: 'org.mockito:mockito-junit-jupiter:3.8.0',
@@ -20,7 +19,7 @@ ext {
             'org.bouncycastle:bcpg-jdk15on:1.69'
         ],
         hamcrest: 'org.hamcrest:hamcrest:2.2',
-        sshd: 'org.apache.sshd:sshd-core:2.6.0',
+        // sshd: 'org.apache.sshd:sshd-core:2.6.0',
         eddsa: 'net.i2p.crypto:eddsa:0.3.0',
         slf4j_api: "org.slf4j:slf4j-api:1.7.32",
         slf4j_nop: "org.slf4j:slf4j-nop:1.7.32",
