Improve Travis CI build Performance

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,15 @@ notifications:
   slack:
     secure: opKU+4jJWYuhq5STCVW2cvxEq/1/xY17xpxGKoJXWA+RbhPo+viT5uJLmb67HwdmvQNwUVAW6uOLO7SDOmpGh5oAwpI74DrA0y6uEzN6GgzutZDBY5oCMRYCGi/5xNOuzDdsryDtSJvXWLxyCysnTrAqqQ9XdOnRK/ZqSIeQg+s=
 matrix:
+  fast_finish: true
   include:
     - jdk: oraclejdk8
       dist: trusty
   allow_failures:
     - jdk: openjdk9
     - jdk: openjdk10
+
+cache:
+  directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
