--- a/.github/workflows/jpos.yml
+++ b/.github/workflows/jpos.yml
@@ -6,8 +6,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 1.8, 9, 10, 11, 12, 13, 14, 15 ]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        java: [ 17 ]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
