--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 import org.gradle.internal.os.OperatingSystem
 apply from: 'jpos/libraries.gradle'
 
+evaluate(new File("${project.projectDir}/VERSION"))
+
 allprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
@@ -15,7 +17,7 @@ subprojects {
     apply plugin: 'project-report'
 
     group = 'org.jpos'
-    version = '3.0.0-SNAPSHOT'
+    version = binding.variables.get("PROJECT_VERSION") ?: "0.0.1"
     [ compileJava, compileTestJava, javadoc ]*.options*.encoding = 'UTF-8'
     def isSnapshot = version.contains("SNAPSHOT")
     def mavenCentralRepo = isSnapshot ?
