--- a/jpos/libraries.gradle
+++ b/jpos/libraries.gradle
@@ -15,8 +15,8 @@ ext {
         xmlunit: 'xmlunit:xmlunit:1.6',
         junit: 'org.junit.jupiter:junit-jupiter:5.8.2',
         bouncycastle: [
-            'org.bouncycastle:bcprov-jdk15on:1.69',
-            'org.bouncycastle:bcpg-jdk15on:1.69'
+            'org.bouncycastle:bcprov-jdk15to18:1.71',
+            'org.bouncycastle:bcpg-jdk14:1.71'
         ],
         hamcrest: 'org.hamcrest:hamcrest:2.2',
         // sshd: 'org.apache.sshd:sshd-core:2.6.0',
