--- a/jpos/src/main/resources/org/jpos/q2/QFactory.properties
+++ b/jpos/src/main/resources/org/jpos/q2/QFactory.properties
@@ -16,3 +16,4 @@ xml-config=org.jpos.q2.qbean.QXmlConfig
 sshd=org.jpos.q2.ssh.SshService
 ssm=org.jpos.q2.security.SMAdaptor
 ks=org.jpos.q2.security.KeyStoreAdaptor
+templates=org.jpos.q2.qbean.TemplateDeployer
