--- a/jpos/build.gradle
+++ b/jpos/build.gradle
@@ -209,7 +209,7 @@ task zip (type: Zip) {
 
 task version (type: JavaExec, dependsOn: classes) {
     description = "Display jPOS Version"
-    main = 'org.jpos.q2.Q2'
+    mainClass = 'org.jpos.q2.Q2'
     args = "--version".split().toList()
     classpath sourceSets.main.runtimeClasspath
 }
